test/unit-tests/data-and-models/testData/sample_pickles/negativeSamples/8.pickle
version https://git-lfs.github.com/spec/v1
oid sha256:2902e211f6e17465fa59a3595b6ec3cbf6b063b47eda27c454ed307cb8d42f45
size 4560251
